--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.31.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-query": "^1.2.9",
     "@types/react-redux": "^7.1.20",
     "@types/styled-components": "^5.1.15"
   }
